Mon Nov 18 18:16:29 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* users.c (trivfs_modify_stat): Omit pointless assignment.

Fri Nov 15 17:37:12 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* users.c (open_hook): New arg syntax.
	(trivfs_check_open_hook): Likewise.
	* ptyio.c (pty_open_hook): Likewise.
	* term.h (pty_open_hook): Likewise.
	
	* users.c (S_termctty_open_terminal): New syntax of trivfs_open.
	
	* users.c (trivfs_S_file_chown): Rewrite using idvecs.
	(trivfs_S_file_chmod): Likewise.

Thu Oct 24 14:44:57 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* users.c (open_hook): Always assert DTR (even if O_NONBLOCK).  
	Don't return any errors if O_NONBLOCK and we don't have carrier. 

Tue Oct  8 22:46:09 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* users.c (open_hook): Zero WINDOW_SIZE during initialization.

Fri Oct  4 12:30:22 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* users.c (S_tioctl_tiocswinsz): Correct test for a changed winsize.

	* ptyio.c (pty_open_hook): Reinitialize pty variables.

	* ptyio.c (pty_io_select): Return SELECT_READ if the slave isn't open.
	(pty_io_read): If the slave isn't open, return EOF.

	* users.c (set_state, open_hook): Call (*BOTTOM)->set_bits
	unconditionally.
	* devio.c (devio_set_bits): Only execute guts if CIGNORE isn't set.

	* ptyio.c (pty_io_read, pty_io_write): Honor O_NONBLOCK.

Wed Oct  2 10:49:18 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* ptyio.c (S_tioctl_tiocsig, S_tioctl_tiocucntl, S_tioctl_tiocpkt):
 	Hold GLOBAL_LOCK while frobbing (especially around send_signal).

	* ptyio.c (ptyio_set_bits): We need only be in packet mode to send
	TIOCPKT_NOSTOP & TIOCPKT_DOSTOP, regardless of the value of
	EXTERNAL_PROCESSING.

Thu Sep 26 14:24:16 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* ptyio.c: Include "tioctl_S.h".

Thu Sep 12 16:34:37 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (HURDLIBS): New variable.
	(OBJS): Don't list libraries here.
